Mapa e dados inseridos (Falta terminar avaliação de produto)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="nomeProduto">Nome: </string>
     <string name="descProduto">Descrição: </string>
     <string name="preco">Preço: </string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
